--- a/client/public/index.html
+++ b/client/public/index.html
@@ -3,9 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project_1</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Black+Ops+One&family=Poppins:ital,wght@0,300;1,200;1,400&display=swap"
+        rel="stylesheet">
+    <title>Assignment</title>
 </head>
 <body>
-   <div id="root"></div> 
+    <div id="root">
+        
+    </div>
 </body>
 </html>
